vscode-extension/test/extension/bundled/libs/incc_interpreter_ue08/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> COMMENT
Rule 2     expression -> NUMBER
Rule 3     sequence -> sequence SEMICOLON expression
Rule 4     sequence -> expression
Rule 5     expression -> LOOP expression DO expression
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> expression TIMES expression
Rule 9     expression -> expression DIVIDE expression
Rule 10    expression -> expression LT expression
Rule 11    expression -> expression GT expression
Rule 12    expression -> expression LE expression
Rule 13    expression -> expression GE expression
Rule 14    expression -> expression EQS expression
Rule 15    expression -> expression NEQS expression
Rule 16    expression -> expression EQ expression
Rule 17    expression -> expression NEQ expression
Rule 18    expression -> expression AND expression
Rule 19    expression -> expression OR expression
Rule 20    expression -> expression NAND expression
Rule 21    expression -> expression NOR expression
Rule 22    expression -> expression IMP expression
Rule 23    expression -> expression XOR expression
Rule 24    expression -> IDENT
Rule 25    ident_list -> IDENT
Rule 26    ident_list -> IDENT COMMA ident_list
Rule 27    expression -> TRUE
Rule 28    expression -> FALSE
Rule 29    expression -> FOR assign_expression SEMICOLON expression SEMICOLON assign_expression DO expression
Rule 30    expression -> LBRACE sequence RBRACE
Rule 31    initializer_list -> initializer
Rule 32    initializer_list -> initializer SEMICOLON initializer_list
Rule 33    expression -> assign_expression
Rule 34    assign_expression -> IDENT ASSIGN expression
Rule 35    expression -> STRING
Rule 36    initializer -> member_assign_expression
Rule 37    initializer -> SET member_assign_expression
Rule 38    expression -> WHILE expression DO expression
Rule 39    expr_list -> expression
Rule 40    expr_list -> expression COMMA expr_list
Rule 41    expression -> CHAR
Rule 42    expression -> DO expression WHILE expression
Rule 43    expression -> NOT expression
Rule 44    expression -> PLUS expression
Rule 45    expression -> MINUS expression
Rule 46    expression -> BACKSLASH RIGHT_ARROW expression
Rule 47    expression -> BACKSLASH ident_list RIGHT_ARROW expression
Rule 48    expression -> BACKSLASH ident_list DOT DOT DOT RIGHT_ARROW expression
Rule 49    assignment_list -> assign_expression
Rule 50    assignment_list -> assign_expression COMMA assignment_list
Rule 51    expression -> LBRACKET RBRACKET
Rule 52    expression -> LBRACKET expr_list RBRACKET
Rule 53    expression -> IF expression THEN expression
Rule 54    expression -> IF expression THEN expression ELSE expression
Rule 55    expression -> expression LBRACKET expression RBRACKET
Rule 56    expression -> STRUCT LBRACE RBRACE
Rule 57    expression -> STRUCT LBRACE initializer_list RBRACE
Rule 58    expression -> LOCK ident_list IN expression
Rule 59    expression -> LPAREN expression RPAREN
Rule 60    expression -> FUN IDENT RIGHT_ARROW expression
Rule 61    expression -> FUN IDENT ident_list RIGHT_ARROW expression
Rule 62    expression -> FUN IDENT ident_list DOT DOT DOT RIGHT_ARROW expression
Rule 63    expression -> LOCAL assignment_list IN expression
Rule 64    expression -> EXTEND expression LBRACE RBRACE
Rule 65    expression -> EXTEND expression LBRACE initializer_list RBRACE
Rule 66    dots -> DOT
Rule 67    dots -> DOT dots
Rule 68    expression -> dots IDENT
Rule 69    expression -> expression dots IDENT
Rule 70    expression -> expression LPAREN RPAREN
Rule 71    expression -> expression LPAREN expr_list RPAREN
Rule 72    expression -> member_assign_expression
Rule 73    member_assign_expression -> dots IDENT ASSIGN expression
Rule 74    expression -> THIS

Terminals, with rules where they appear

AND                  : 18
ASSIGN               : 34 73
BACKSLASH            : 46 47 48
CHAR                 : 41
COMMA                : 26 40 50
COMMENT              : 1
DIVIDE               : 9
DO                   : 5 29 38 42
DOT                  : 48 48 48 62 62 62 66 67
ELSE                 : 54
EQ                   : 16
EQS                  : 14
EXTEND               : 64 65
FALSE                : 28
FOR                  : 29
FUN                  : 60 61 62
GE                   : 13
GT                   : 11
IDENT                : 24 25 26 34 60 61 62 68 69 73
IF                   : 53 54
IMP                  : 22
IN                   : 58 63
LBRACE               : 30 56 57 64 65
LBRACKET             : 51 52 55
LE                   : 12
LOCAL                : 63
LOCK                 : 58
LOOP                 : 5
LPAREN               : 59 70 71
LT                   : 10
MINUS                : 7 45
NAND                 : 20
NEQ                  : 17
NEQS                 : 15
NOR                  : 21
NOT                  : 43
NUMBER               : 2
OR                   : 19
PLUS                 : 6 44
RBRACE               : 30 56 57 64 65
RBRACKET             : 51 52 55
RIGHT_ARROW          : 46 47 48 60 61 62
RPAREN               : 59 70 71
SEMICOLON            : 3 29 29 32
SET                  : 37
STRING               : 35
STRUCT               : 56 57
THEN                 : 53 54
THIS                 : 74
TIMES                : 8
TRUE                 : 27
WHILE                : 38 42
XOR                  : 23
error                : 

Nonterminals, with rules where they appear

assign_expression    : 29 29 33 49 50
assignment_list      : 50 63
dots                 : 67 68 69 73
expr_list            : 40 52 71
expression           : 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 29 29 34 38 38 39 40 42 42 43 44 45 46 47 48 53 53 54 54 54 55 55 58 59 60 61 62 63 64 65 69 70 71 73 0
ident_list           : 26 47 48 58 61 62
initializer          : 31 32
initializer_list     : 32 57 65
member_assign_expression : 36 37 72
sequence             : 3 30

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . COMMENT
    (2) expression -> . NUMBER
    (5) expression -> . LOOP expression DO expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQS expression
    (15) expression -> . expression NEQS expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression NEQ expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression NAND expression
    (21) expression -> . expression NOR expression
    (22) expression -> . expression IMP expression
    (23) expression -> . expression XOR expression
    (24) expression -> . IDENT
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . FOR assign_expression SEMICOLON expression SEMICOLON assign_expression DO expression
    (30) expression -> . LBRACE sequence RBRACE
    (33) expression -> . assign_expression
    (35) expression -> . STRING
    (38) expression -> . WHILE expression DO expression
    (41) expression -> . CHAR
    (42) expression -> . DO expression WHILE expression
    (43) expression -> . NOT expression
    (44) expression -> . PLUS expression
    (45) expression -> . MINUS expression
    (46) expression -> . BACKSLASH RIGHT_ARROW expression
    (47) expression -> . BACKSLASH ident_list RIGHT_ARROW expression
    (48) expression -> . BACKSLASH ident_list DOT DOT DOT RIGHT_ARROW expression
    (51) expression -> . LBRACKET RBRACKET
    (52) expression -> . LBRACKET expr_list RBRACKET
    (53) expression -> . IF expression THEN expression
    (54) expression -> . IF expression THEN expression ELSE expression
    (55) expression -> . expression LBRACKET expression RBRACKET
    (56) expression -> . STRUCT LBRACE RBRACE
    (57) expression -> . STRUCT LBRACE initializer_list RBRACE
    (58) expression -> . LOCK ident_list IN expression
    (59) expression -> . LPAREN expression RPAREN
    (60) expression -> . FUN IDENT RIGHT_ARROW expression
    (61) expression -> . FUN IDENT ident_list RIGHT_ARROW expression
    (62) expression -> . FUN IDENT ident_list DOT DOT DOT RIGHT_ARROW expression
    (63) expression -> . LOCAL assignment_list IN expression
    (64) expression -> . EXTEND expression LBRACE RBRACE
    (65) expression -> . EXTEND expression LBRACE initializer_list RBRACE
    (68) expression -> . dots IDENT
    (69) expression -> . expression dots IDENT
    (70) expression -> . expression LPAREN RPAREN
    (71) expression -> . expression LPAREN expr_list RPAREN
    (72) expression -> . member_assign_expression
    (74) expression -> . THIS
    (34) assign_expression -> . IDENT ASSIGN expression
    (66) dots -> . DOT
    (67) dots -> . DOT dots
    (73) member_assign_expression -> . dots IDENT ASSIGN expression

    COMMENT         shift and go to state 2
    NUMBER          shift and go to state 3
    LOOP            shift and go to state 4
    IDENT           shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    FOR             shift and go to state 11
    LBRACE          shift and go to state 13
    STRING          shift and go to state 14
    WHILE           shift and go to state 15
    CHAR            shift and go to state 16
    DO              shift and go to state 5
    NOT             shift and go to state 17
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    BACKSLASH       shift and go to state 18
    LBRACKET        shift and go to state 20
    IF              shift and go to state 21
    STRUCT          shift and go to state 22
    LOCK            shift and go to state 23
    LPAREN          shift and go to state 24
    FUN             shift and go to state 25
    LOCAL           shift and go to state 26
    EXTEND          shift and go to state 27
    THIS            shift and go to state 30
    DOT             shift and go to state 19

    expression                     shift and go to state 1
    assign_expression              shift and go to state 12
    dots                           shift and go to state 28
    member_assign_expression       shift and go to state 29

state 1

    (0) S' -> expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . EQS expression
    (15) expression -> expression . NEQS expression
    (16) expression -> expression . EQ expression
    (17) expression -> expression . NEQ expression
    (18) expression -> expression . AND expression
    (19) expression -> expression . OR expression
    (20) expression -> expression . NAND expression
    (21) expression -> expression . NOR expression
    (22) expression -> expression . IMP expression
    (23) expression -> expression . XOR expression
    (55) expression -> expression . LBRACKET expression RBRACKET
    (69) expression -> expression . dots IDENT
    (70) expression -> expression . LPAREN RPAREN
    (71) expression -> expression . LPAREN expr_list RPAREN
    (66) dots -> . DOT
    (67) dots -> . DOT dots

    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    LT              shift and go to state 35
    GT              shift and go to state 36
    LE              shift and go to state 37
    GE              shift and go to state 38
    EQS             shift and go to state 39
    NEQS            shift and go to state 40
    EQ              shift and go to state 41
    NEQ             shift and go to state 42
    AND             shift and go to state 43
    OR              shift and go to state 44
    NAND            shift and go to state 45
    NOR             shift and go to state 46
    IMP             shift and go to state 47
    XOR             shift and go to state 48
    LBRACKET        shift and go to state 49
    LPAREN          shift and go to state 51
    DOT             shift and go to state 19

    dots                           shift and go to state 50

state 2

    (1) expression -> COMMENT .

    PLUS            reduce using rule 1 (expression -> COMMENT .)
    MINUS           reduce using rule 1 (expression -> COMMENT .)
    TIMES           reduce using rule 1 (expression -> COMMENT .)
    DIVIDE          reduce using rule 1 (expression -> COMMENT .)
    LT              reduce using rule 1 (expression -> COMMENT .)
    GT              reduce using rule 1 (expression -> COMMENT .)
    LE              reduce using rule 1 (expression -> COMMENT .)
    GE              reduce using rule 1 (expression -> COMMENT .)
    EQS             reduce using rule 1 (expression -> COMMENT .)
    NEQS            reduce using rule 1 (expression -> COMMENT .)
    EQ              reduce using rule 1 (expression -> COMMENT .)
    NEQ             reduce using rule 1 (expression -> COMMENT .)
    AND             reduce using rule 1 (expression -> COMMENT .)
    OR              reduce using rule 1 (expression -> COMMENT .)
    NAND            reduce using rule 1 (expression -> COMMENT .)
    NOR             reduce using rule 1 (expression -> COMMENT .)
    IMP             reduce using rule 1 (expression -> COMMENT .)
    XOR             reduce using rule 1 (expression -> COMMENT .)
    LBRACKET        reduce using rule 1 (expression -> COMMENT .)
    LPAREN          reduce using rule 1 (expression -> COMMENT .)
    DOT             reduce using rule 1 (expression -> COMMENT .)
    $end            reduce using rule 1 (expression -> COMMENT .)
    DO              reduce using rule 1 (expression -> COMMENT .)
    WHILE           reduce using rule 1 (expression -> COMMENT .)
    RBRACE          reduce using rule 1 (expression -> COMMENT .)
    SEMICOLON       reduce using rule 1 (expression -> COMMENT .)
    COMMA           reduce using rule 1 (expression -> COMMENT .)
    RBRACKET        reduce using rule 1 (expression -> COMMENT .)
    THEN            reduce using rule 1 (expression -> COMMENT .)
    RPAREN          reduce using rule 1 (expression -> COMMENT .)
    LBRACE          reduce using rule 1 (expression -> COMMENT .)
    IN              reduce using rule 1 (expression -> COMMENT .)
    ELSE            reduce using rule 1 (expression -> COMMENT .)


state 3

    (2) expression -> NUMBER .

    PLUS            reduce using rule 2 (expression -> NUMBER .)
    MINUS           reduce using rule 2 (expression -> NUMBER .)
    TIMES           reduce using rule 2 (expression -> NUMBER .)
    DIVIDE          reduce using rule 2 (expression -> NUMBER .)
    LT              reduce using rule 2 (expression -> NUMBER .)
    GT              reduce using rule 2 (expression -> NUMBER .)
    LE              reduce using rule 2 (expression -> NUMBER .)
    GE              reduce using rule 2 (expression -> NUMBER .)
    EQS             reduce using rule 2 (expression -> NUMBER .)
    NEQS            reduce using rule 2 (expression -> NUMBER .)
    EQ              reduce using rule 2 (expression -> NUMBER .)
    NEQ             reduce using rule 2 (expression -> NUMBER .)
    AND             reduce using rule 2 (expression -> NUMBER .)
    OR              reduce using rule 2 (expression -> NUMBER .)
    NAND            reduce using rule 2 (expression -> NUMBER .)
    NOR             reduce using rule 2 (expression -> NUMBER .)
    IMP             reduce using rule 2 (expression -> NUMBER .)
    XOR             reduce using rule 2 (expression -> NUMBER .)
    LBRACKET        reduce using rule 2 (expression -> NUMBER .)
    LPAREN          reduce using rule 2 (expression -> NUMBER .)
    DOT             reduce using rule 2 (expression -> NUMBER .)
    $end            reduce using rule 2 (expression -> NUMBER .)
    DO              reduce using rule 2 (expression -> NUMBER .)
    WHILE           reduce using rule 2 (expression -> NUMBER .)
    RBRACE          reduce using rule 2 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 2 (expression -> NUMBER .)
    COMMA           reduce using rule 2 (expression -> NUMBER .)
    RBRACKET        reduce using rule 2 (expression -> NUMBER .)
    THEN            reduce using rule 2 (expression -> NUMBER .)
    RPAREN          reduce using rule 2 (expression -> NUMBER .)
    LBRACE          reduce using rule 2 (expression -> NUMBER .)
    IN              reduce using rule 2 (expression -> NUMBER .)
    ELSE            reduce using rule 2 (expression -> NUMBER .)


state 4

    (5) expression -> LOOP . expression DO expression
    (1) expression -> . COMMENT
    (2) expression -> . NUMBER
    (5) expression -> . LOOP expression DO expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQS expression
    (15) expression -> . expression NEQS expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression NEQ expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression NAND expression
    (21) expression -> . expression NOR expression
    (22) expression -> . expression IMP expression
    (23) expression -> . expression XOR expression
    (24) expression -> . IDENT
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . FOR assign_expression SEMICOLON expression SEMICOLON assign_expression DO expression
    (30) expression -> . LBRACE sequence RBRACE
    (33) expression -> . assign_expression
    (35) expression -> . STRING
    (38) expression -> . WHILE expression DO expression
    (41) expression -> . CHAR
    (42) expression -> . DO expression WHILE expression
    (43) expression -> . NOT expression
    (44) expression -> . PLUS expression
    (45) expression -> . MINUS expression
    (46) expression -> . BACKSLASH RIGHT_ARROW expression
    (47) expression -> . BACKSLASH ident_list RIGHT_ARROW expression
    (48) expression -> . BACKSLASH ident_list DOT DOT DOT RIGHT_ARROW expression
    (51) expression -> . LBRACKET RBRACKET
    (52) expression -> . LBRACKET expr_list RBRACKET
    (53) expression -> . IF expression THEN expression
    (54) expression -> . IF expression THEN expression ELSE expression
    (55) expression -> . expression LBRACKET expression RBRACKET
    (56) expression -> . STRUCT LBRACE RBRACE
    (57) expression -> . STRUCT LBRACE initializer_list RBRACE
    (58) expression -> . LOCK ident_list IN expression
    (59) expression -> . LPAREN expression RPAREN
    (60) expression -> . FUN IDENT RIGHT_ARROW expression
    (61) expression -> . FUN IDENT ident_list RIGHT_ARROW expression
    (62) expression -> . FUN IDENT ident_list DOT DOT DOT RIGHT_ARROW expression
    (63) expression -> . LOCAL assignment_list IN expression
    (64) expression -> . EXTEND expression LBRACE RBRACE
    (65) expression -> . EXTEND expression LBRACE initializer_list RBRACE
    (68) expression -> . dots IDENT
    (69) expression -> . expression dots IDENT
    (70) expression -> . expression LPAREN RPAREN
    (71) expression -> . expression LPAREN expr_list RPAREN
    (72) expression -> . member_assign_expression
    (74) expression -> . THIS
    (34) assign_expression -> . IDENT ASSIGN expression
    (66) dots -> . DOT
    (67) dots -> . DOT dots
    (73) member_assign_expression -> . dots IDENT ASSIGN expression

    COMMENT         shift and go to state 2
    NUMBER          shift and go to state 3
    LOOP            shift and go to state 4
    IDENT           shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    FOR             shift and go to state 11
    LBRACE          shift and go to state 13
    STRING          shift and go to state 14
    WHILE           shift and go to state 15
    CHAR            shift and go to state 16
    DO              shift and go to state 5
    NOT             shift and go to state 17
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    BACKSLASH       shift and go to state 18
    LBRACKET        shift and go to state 20
    IF              shift and go to state 21
    STRUCT          shift and go to state 22
    LOCK            shift and go to state 23
    LPAREN          shift and go to state 24
    FUN             shift and go to state 25
    LOCAL           shift and go to state 26
    EXTEND          shift and go to state 27
    THIS            shift and go to state 30
    DOT             shift and go to state 19

    expression                     shift and go to state 52
    assign_expression              shift and go to state 12
    dots                           shift and go to state 28
    member_assign_expression       shift and go to state 29

state 5

    (42) expression -> DO . expression WHILE expression
    (1) expression -> . COMMENT
    (2) expression -> . NUMBER
    (5) expression -> . LOOP expression DO expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQS expression
    (15) expression -> . expression NEQS expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression NEQ expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression NAND expression
    (21) expression -> . expression NOR expression
    (22) expression -> . expression IMP expression
    (23) expression -> . expression XOR expression
    (24) expression -> . IDENT
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . FOR assign_expression SEMICOLON expression SEMICOLON assign_expression DO expression
    (30) expression -> . LBRACE sequence RBRACE
    (33) expression -> . assign_expression
    (35) expression -> . STRING
    (38) expression -> . WHILE expression DO expression
    (41) expression -> . CHAR
    (42) expression -> . DO expression WHILE expression
    (43) expression -> . NOT expression
    (44) expression -> . PLUS expression
    (45) expression -> . MINUS expression
    (46) expression -> . BACKSLASH RIGHT_ARROW expression
    (47) expression -> . BACKSLASH ident_list RIGHT_ARROW expression
    (48) expression -> . BACKSLASH ident_list DOT DOT DOT RIGHT_ARROW expression
    (51) expression -> . LBRACKET RBRACKET
    (52) expression -> . LBRACKET expr_list RBRACKET
    (53) expression -> . IF expression THEN expression
    (54) expression -> . IF expression THEN expression ELSE expression
    (55) expression -> . expression LBRACKET expression RBRACKET
    (56) expression -> . STRUCT LBRACE RBRACE
    (57) expression -> . STRUCT LBRACE initializer_list RBRACE
    (58) expression -> . LOCK ident_list IN expression
    (59) expression -> . LPAREN expression RPAREN
    (60) expression -> . FUN IDENT RIGHT_ARROW expression
    (61) expression -> . FUN IDENT ident_list RIGHT_ARROW expression
    (62) expression -> . FUN IDENT ident_list DOT DOT DOT RIGHT_ARROW expression
    (63) expression -> . LOCAL assignment_list IN expression
    (64) expression -> . EXTEND expression LBRACE RBRACE
    (65) expression -> . EXTEND expression LBRACE initializer_list RBRACE
    (68) expression -> . dots IDENT
    (69) expression -> . expression dots IDENT
    (70) expression -> . expression LPAREN RPAREN
    (71) expression -> . expression LPAREN expr_list RPAREN
    (72) expression -> . member_assign_expression
    (74) expression -> . THIS
    (34) assign_expression -> . IDENT ASSIGN expression
    (66) dots -> . DOT
    (67) dots -> . DOT dots
    (73) member_assign_expression -> . dots IDENT ASSIGN expression

    COMMENT         shift and go to state 2
    NUMBER          shift and go to state 3
    LOOP            shift and go to state 4
    IDENT           shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    FOR             shift and go to state 11
    LBRACE          shift and go to state 13
    STRING          shift and go to state 14
    WHILE           shift and go to state 15
    CHAR            shift and go to state 16
    DO              shift and go to state 5
    NOT             shift and go to state 17
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    BACKSLASH       shift and go to state 18
    LBRACKET        shift and go to state 20
    IF              shift and go to state 21
    STRUCT          shift and go to state 22
    LOCK            shift and go to state 23
    LPAREN          shift and go to state 24
    FUN             shift and go to state 25
    LOCAL           shift and go to state 26
    EXTEND          shift and go to state 27
    THIS            shift and go to state 30
    DOT             shift and go to state 19

    expression                     shift and go to state 53
    assign_expression              shift and go to state 12
    dots                           shift and go to state 28
    member_assign_expression       shift and go to state 29

state 6

    (44) expression -> PLUS . expression
    (1) expression -> . COMMENT
    (2) expression -> . NUMBER
    (5) expression -> . LOOP expression DO expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQS expression
    (15) expression -> . expression NEQS expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression NEQ expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression NAND expression
    (21) expression -> . expression NOR expression
    (22) expression -> . expression IMP expression
    (23) expression -> . expression XOR expression
    (24) expression -> . IDENT
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . FOR assign_expression SEMICOLON expression SEMICOLON assign_expression DO expression
    (30) expression -> . LBRACE sequence RBRACE
    (33) expression -> . assign_expression
    (35) expression -> . STRING
    (38) expression -> . WHILE expression DO expression
    (41) expression -> . CHAR
    (42) expression -> . DO expression WHILE expression
    (43) expression -> . NOT expression
    (44) expression -> . PLUS expression
    (45) expression -> . MINUS expression
    (46) expression -> . BACKSLASH RIGHT_ARROW expression
    (47) expression -> . BACKSLASH ident_list RIGHT_ARROW expression
    (48) expression -> . BACKSLASH ident_list DOT DOT DOT RIGHT_ARROW expression
    (51) expression -> . LBRACKET RBRACKET
    (52) expression -> . LBRACKET expr_list RBRACKET
    (53) expression -> . IF expression THEN expression
    (54) expression -> . IF expression THEN expression ELSE expression
    (55) expression -> . expression LBRACKET expression RBRACKET
    (56) expression -> . STRUCT LBRACE RBRACE
    (57) expression -> . STRUCT LBRACE initializer_list RBRACE
    (58) expression -> . LOCK ident_list IN expression
    (59) expression -> . LPAREN expression RPAREN
    (60) expression -> . FUN IDENT RIGHT_ARROW expression
    (61) expression -> . FUN IDENT ident_list RIGHT_ARROW expression
    (62) expression -> . FUN IDENT ident_list DOT DOT DOT RIGHT_ARROW expression
    (63) expression -> . LOCAL assignment_list IN expression
    (64) expression -> . EXTEND expression LBRACE RBRACE
    (65) expression -> . EXTEND expression LBRACE initializer_list RBRACE
    (68) expression -> . dots IDENT
    (69) expression -> . expression dots IDENT
    (70) expression -> . expression LPAREN RPAREN
    (71) expression -> . expression LPAREN expr_list RPAREN
    (72) expression -> . member_assign_expression
    (74) expression -> . THIS
    (34) assign_expression -> . IDENT ASSIGN expression
    (66) dots -> . DOT
    (67) dots -> . DOT dots
    (73) member_assign_expression -> . dots IDENT ASSIGN expression

    COMMENT         shift and go to state 2
    NUMBER          shift and go to state 3
    LOOP            shift and go to state 4
    IDENT           shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    FOR             shift and go to state 11
    LBRACE          shift and go to state 13
    STRING          shift and go to state 14
    WHILE           shift and go to state 15
    CHAR            shift and go to state 16
    DO              shift and go to state 5
    NOT             shift and go to state 17
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    BACKSLASH       shift and go to state 18
    LBRACKET        shift and go to state 20
    IF              shift and go to state 21
    STRUCT          shift and go to state 22
    LOCK            shift and go to state 23
    LPAREN          shift and go to state 24
    FUN             shift and go to state 25
    LOCAL           shift and go to state 26
    EXTEND          shift and go to state 27
    THIS            shift and go to state 30
    DOT             shift and go to state 19

    expression                     shift and go to state 54
    assign_expression              shift and go to state 12
    dots                           shift and go to state 28
    member_assign_expression       shift and go to state 29

state 7

    (45) expression -> MINUS . expression
    (1) expression -> . COMMENT
    (2) expression -> . NUMBER
    (5) expression -> . LOOP expression DO expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQS expression
    (15) expression -> . expression NEQS expression
    (16) expression -> . expression EQ expression
    (17) expression -> . expression NEQ expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression NAND expression
    (21) expression -> . expression NOR expression
    (22) expression -> . expression IMP expression
    (23) expression -> . expression XOR expression
    (24) expression -> . IDENT
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . FOR assign_expression SEMICOLON expression SEMICOLON assign_expression DO expression
    (30) expression -> . LBRACE sequence RBRACE
    (33) expression -> . assign_expression
    (35) expression -> . STRING
    (38) expression -> . WHILE expression DO expression
    (41) expression -> . CHAR
    (42) expression -> . DO expression WHILE expression
    (43) expression -> . NOT expression
    (44) expression -> . PLUS expression
    (45) expression -> . MINUS expression
    (46) expression -> . BACKSLASH RIGHT_ARROW expression
    (47) expression -> . BACKSLASH ident_list RIGHT_ARROW expression
    (48) expression -> . BACKSLASH ident_list DOT DOT DOT RIGHT_ARROW expression
    (51) expression -> . LBRACKET RBRACKET
    (52) expression -> . LBRACKET expr_list RBRACKET
    (53) expression -> . IF expression THEN expression
    (54) expression -> . IF expression THEN expression ELSE expression
    (55) expression -> . expression LBRACKET expression RBRACKET
    (56) expression -> . STRUCT LBRACE RBRACE
    (57) expression -> . STRUCT LBRACE initializer_list RBRACE
    (58) expression -> . LOCK ident_list IN expression
    (59) expression -> . LPAREN expression RPAREN
    (60) expression -> . FUN IDENT RIGHT_ARROW expression
    (61) expression -> . FUN IDENT ident_list RIGHT_ARROW expression
    (62) expression -> . FUN IDENT ident_list DOT DOT DOT RIGHT_ARROW expression
    (63) expression -> . LOCAL assignment_list IN expression
    (64) expression -> . EXTEND expression LBRACE RBRACE
    (65) expression -> . EXTEND expression LBRACE initializer_list RBRACE
    (68) expression -> . dots IDENT
    (69) expression -> . expression dots IDENT
    (70) expression -> . expression LPAREN RPAREN
    (71) expression -> . expression LPAREN expr_list RPAREN
    (72) expression -> . member_assign_expression
    (74) expression -> . THIS
    (34) assign_expression -> . IDENT ASSIGN expression
    (66) dots -> . DOT
    (67) dots -> . DOT dots
    (73) member_assign_expression -> . dots IDENT ASSIGN expression

    COMMENT         shift and go to state 2
    NUMBER          shift and go to state 3
    LOOP            shift and go to state 4
    IDENT           shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    FOR             shift and go to state 11
    LBRACE          shift and go to state 13
    STRING          shift and go to state 14
    WHILE           shift and go to state 15
    CHAR            shift and go to state 16
    DO              shift and go to state 5
    NOT             shift and go to state 17
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    BACKSLASH       shift and go to state 18
    LBRACKET        shift and go to state 20
    IF              shift and go to state 21
    STRUCT          shift and go to state 22
    LOCK            shift and go to state 23
    LPAREN          shift and go to state 24
    FUN             shift and go to state 25
    LOCAL           shift and go to state 26
    EXTEND          shift and go to state 27
    THIS            shift and go to state 30
    DOT             shift and go to state 19

    expression                     shift and go to state 55
    assign_expression              shift and go to state 12
    dots                           shift and go to state 28
    member_assign_expression       shift and go to state 29

state 8

    (24) expression -> IDENT .
    (34) assign_expression -> IDENT . ASSIGN expression
